--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul>
 
                   <li><a href="#">Technology</a></li>
-                  <li><a href="#">Articles</a></li>
+                  <li><a href="./docs/bhushan-pawar-5y.pdf">Resume</a></li>
                   <li><a href="https://www.youtube.com/channel/UCpFgD7yT2nLItjz_7ra7XEA/featured">Youtube</a>
                   </li>
                   <li><a href="#">Work</a></li>
@@ -70,7 +70,7 @@
         <ul class="menu_mm">
 
           <li><a href="#">Technology</a></li>
-          <li><a href="#">Articles</a></li>
+          <li><a href="./docs/bhushan-pawar-5y.pdf">Resume</a></li>
           <li><a href="https://www.youtube.com/channel/UCpFgD7yT2nLItjz_7ra7XEA/featured">Youtube</a>
           </li>
           <li><a href="#">Work</a></li>
