adding changes for resume

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul>
 
                   <li><a href="#">Technology</a></li>
-                  <li><a href="./docs/bhushan-pawar-5y.pdf">Resume</a></li>
+                  <li><a href="https://docs.google.com/document/d/1CqJu4W-RX4FGysCS-JdZ2n3agk1KpLy0AaMHp_Z1Xr0/edit?usp=sharing">Resume</a></li>
                   <li><a href="https://www.youtube.com/channel/UCpFgD7yT2nLItjz_7ra7XEA/featured">Youtube</a>
                   </li>
                   <li><a href="#">Work</a></li>
@@ -70,7 +70,7 @@
         <ul class="menu_mm">
 
           <li><a href="#">Technology</a></li>
-          <li><a href="./docs/bhushan-pawar-5y.pdf">Resume</a></li>
+          <li><a href="https://docs.google.com/document/d/1CqJu4W-RX4FGysCS-JdZ2n3agk1KpLy0AaMHp_Z1Xr0/edit?usp=sharing">Resume</a></li>
           <li><a href="https://www.youtube.com/channel/UCpFgD7yT2nLItjz_7ra7XEA/featured">Youtube</a>
           </li>
           <li><a href="#">Work</a></li>
