adding changes for db json

--- a/index.html
+++ b/index.html
@@ -527,6 +527,104 @@
                 </div>
                 
               </div>
+              <!--Courses-->
+
+              <div class="blog_section">
+                <div class="section_panel d-flex flex-row align-items-center justify-content-start">
+                  <div class="section_title">Couses on Udemy</div>
+                  <div class="section_tags ml-auto">
+                    <ul>
+                      <li class="active"><a href="category.html">all</a></li>
+                      <li><a href="category.html">style hunter</a></li>
+                      <li><a href="category.html">vogue</a></li>
+                      <li><a href="category.html">health & fitness</a></li>
+                      <li><a href="category.html">travel</a></li>
+                    </ul>
+                  </div>
+                  
+                </div>
+                <div class="section_content">
+                  <div class="grid clearfix">
+
+                    <!-- Large Card With Background -->
+                    <div class="card card_large_with_background grid-item">
+                      <div class="card_background" style="background-image:url(https://images.unsplash.com/photo-1518331647614-7a1f04cd34cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1498&q=80)"></div>
+                      <div class="card-body">
+                        <div class="card-title"><a href="./business-rich-message-chatbots-in-angular-8-with-dialogflow.html">
+                            Build your business chatbot with DialogFlow and angular 8 with rich support of messages like Google Assistant and Slack
+                          </a>
+                        </div>
+                        <small class="post_meta"><a href="#">Bhushan Pawar</a><span> </span></small>
+                      </div>
+                    </div>
+
+                    <!-- Large Card With Image -->
+                    <div class="card grid-item card_large_with_image">
+                      <img class="card-img-top" src="images/post_9.jpg" alt="">
+                      <div class="card-body">
+                        <div class="card-title"><a href="#">Meeting past time over coffee — a thought</a>
+                        </div>
+                        <p class="card-text">Making life easier and cozy is always an amazed dream of everyone than
+                          making it contentful and happy (intentionally and unintentionally),
+                          though both are right in its own place.
+                          But I feel marking it successful has a lot of inclination towards
+                          "what you feel of your happiness and wins, and how you treat your defeats".
+                          Because a most significant difference of digesting both is trusting the progress you are
+                          making....</p>
+                        <small class="post_meta"><a href="#">Bhushan Pawar</a><span> </span></small>
+                      </div>
+                    </div>
+
+                    <!-- Default Card With Image -->
+                    <div class="card card_small_with_image grid-item">
+                      <img class="card-img-top" src="images/post_5.jpg" alt="">
+                      <div class="card-body">
+                        <div class="card-title card-title-small"><a href="#">The best life artist — you!</a>
+                        </div>
+                        <small class="post_meta"><a href="#">Bhushan Pawar</a><span></span></small>
+                      </div>
+                    </div>
+
+                    <!-- Default Card With Background -->
+
+                    <div class="card card_default card_default_with_background grid-item">
+                      <div class="card_background" style="background-image:url(images/post_6.jpg)"></div>
+                      <div class="card-body">
+                        <div class="card-title card-title-small"><a href="#">Lemons of your life! — a story of
+                            challenges</a></div>
+                      </div>
+                    </div>
+
+                    <!-- Default Card No Image -->
+                    <!-- <div class="card card_default card_default_no_image grid-item">
+                      <div class="card-body">
+                        <div class="card-title card-title-small"><a href="post.html">How Did van
+                            Gogh’s Turbulent Mind Depict One of the Most</a></div>
+                      </div>
+                    </div> -->
+
+                    <!-- Default Card No Image -->
+                    <!-- <div class="card card_default card_default_no_image grid-item">
+                      <div class="card-body">
+                        <div class="card-title card-title-small"><a href="post.html">How Did van
+                            Gogh’s Turbulent Mind Depict One of the Most</a></div>
+                      </div>
+                    </div> -->
+
+                    <!-- Default Card With Background -->
+
+                    <div class="card card_default card_default_with_background grid-item">
+                      <div class="card_background" style="background-image:url(images/post_7.jpg)"></div>
+                      <div class="card-body">
+                        <div class="card-title card-title-small"><a href="#">Carnival of people, sugar, lemons —
+                            an experience</a></div>
+                      </div>
+                    </div>
+
+                  </div>
+
+                </div>
+              </div>
 
               <!-- Blog Section - What's Trending -->
 
