adding changes for new build

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146783186-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-146783186-1');
+  </script>
 <link rel="stylesheet" href="styles.95a9ce58bfe17171b45a.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.27965c48d77c449cb93c.js" type="module"></script><script src="polyfills-es2015.5fe58634d829bf399992.js" type="module"></script><script src="runtime-es5.ee2dcdf2e59a31c9da78.js" nomodule></script><script src="polyfills-es5.124b9136ad37aaf744fd.js" nomodule></script><script src="scripts.df86d462ad6d6d922c7b.js"></script><script src="main-es2015.d2aa2eb1ae7265cacea6.js" type="module"></script><script src="main-es5.781303e1f3d37bccf9de.js" nomodule></script></body>
+<script src="runtime-es2015.27965c48d77c449cb93c.js" type="module"></script><script src="polyfills-es2015.5fe58634d829bf399992.js" type="module"></script><script src="runtime-es5.ee2dcdf2e59a31c9da78.js" nomodule></script><script src="polyfills-es5.124b9136ad37aaf744fd.js" nomodule></script><script src="scripts.df86d462ad6d6d922c7b.js"></script><script src="main-es2015.2e9045c539a0f644e9b0.js" type="module"></script><script src="main-es5.29155e73936bf8cc8207.js" nomodule></script></body>
 </html>
