adding changes for new build

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PersonalWeb</title>
+  <title>Bhushan Pawar - Programmer, Writer</title>
   <base href="/">
-
+  <meta name="description" content="Bhushan's technology profile, articles, work experience, resume and youtube">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -19,5 +19,5 @@
 <link rel="stylesheet" href="styles.95a9ce58bfe17171b45a.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.27965c48d77c449cb93c.js" type="module"></script><script src="polyfills-es2015.5fe58634d829bf399992.js" type="module"></script><script src="runtime-es5.ee2dcdf2e59a31c9da78.js" nomodule></script><script src="polyfills-es5.124b9136ad37aaf744fd.js" nomodule></script><script src="scripts.df86d462ad6d6d922c7b.js"></script><script src="main-es2015.2e9045c539a0f644e9b0.js" type="module"></script><script src="main-es5.29155e73936bf8cc8207.js" nomodule></script></body>
+<script src="runtime-es2015.27965c48d77c449cb93c.js" type="module"></script><script src="polyfills-es2015.5fe58634d829bf399992.js" type="module"></script><script src="runtime-es5.ee2dcdf2e59a31c9da78.js" nomodule></script><script src="polyfills-es5.124b9136ad37aaf744fd.js" nomodule></script><script src="scripts.df86d462ad6d6d922c7b.js"></script><script src="main-es2015.3d981500bfa9536b2575.js" type="module"></script><script src="main-es5.1a5a5be34c19e679871c.js" nomodule></script></body>
 </html>
