--- a/personal-web/src/index.html
+++ b/personal-web/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PersonalWeb</title>
+  <title>Bhushan Pawar - Programmer, Writer</title>
   <base href="/">
-
+  <meta name="description" content="Bhushan's technology profile, articles, work experience, resume and youtube">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Global site tag (gtag.js) - Google Analytics -->
